# minutiae-cylinder-code

./: readme.md
cpp/: CMakeLists.txt
cpp/mcc/: CMakeLists.txt  Functions.cpp  Functions.h  Matrix.hpp  Munkres.cpp  Munkres.h  constants.h  convexhull.hpp  fingerprint_base.cpp  fingerprint_base.h  mcc.cpp  mcc.h  utils.hpp
cpp/mcc-cli/: CMakeLists.txt  base64.cpp  base64.h  main.cpp
rust/mcc-rs/: Cargo.toml
rust/mcc-rs/.cargo/: config.toml
rust/mcc-rs/src/: constants.rs  lib.rs  mcc.rs  mcc_bit.rs  utils.rs
rust/mcc-rs/templates/: 1023_1_1.incits  1023_2_1.incits  1072_5_1.incits
rust/template-manager/: Cargo.toml
rust/template-manager/src/: fingerprint_base.rs  lib.rs  template.rs
