[package]
name = "mcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
template-manager = { path = "../template-manager" }
libm = "*"
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15.6"
geo = "0.23"
csv = "1.1"
pathfinding = "3.0.14"
ordered-float = "3.3.0"
bitvec = "1"